--- a/app/(home)/kaleidoscope/kaleidoscopeStyles.module.css
+++ b/app/(home)/kaleidoscope/kaleidoscopeStyles.module.css
@@ -3,3 +3,31 @@
 .title {
     color: blue;
 }
+
+.container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.menu {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.menuButton {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 10px 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 18px;
+    border: none;
+    transition: background-color 0.3s ease;
+}
+
+.menuButton:hover {
+    background-color: rgba(255, 255, 255, 1);
+}
