--- a/app/(home)/kaleidoscope/kaleidoscopeStyles.module.css
+++ b/app/(home)/kaleidoscope/kaleidoscopeStyles.module.css
@@ -13,9 +13,10 @@
 
 .menu {
     position: absolute;
-    bottom: 20px;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
+    z-index: 2;
 }
 
 .menuButton {
