--- a/app/global.css
+++ b/app/global.css
@@ -48,3 +48,34 @@ p, h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+/* ====================
+   Customizations
+   ==================== */
+:root {
+  font-family: system-ui, sans-serif;
+  font-weight: normal;
+}
+
+h1 {
+  font-size: 4em;
+}
+
+h2 {
+  font-size: 3em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1.5em;
+}
+
+h5 {
+  font-size: 1.25em;
+}
+
+h6 {
+  font-size: 1em;
+}
