--- a/app/(home)/projects/[slug]/styles.module.css
+++ b/app/(home)/projects/[slug]/styles.module.css
@@ -1,29 +1,49 @@
 .article {
-
+  color-scheme: dark;
+  container: article / inline-size;
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(20px);
+  border-radius: 1rem;
 }
 
 .projectTitle {
-
+  color: white;
+  background: black;
+  border-radius: 1rem 1rem 0 0;
+  padding: 1rem;
 }
 
-.website {
+.content {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  height: 100%;
+}
+
+.showcase {
+  flex-shrink: 0;
+  flex-basis: 66%;
+  background: black;
+  padding: 1rem;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+
+.showcase-piece {
   aspect-ratio: 16 / 9;
-  pointer-events: none;
-  border: none;
 }
 
 .documentation {
-
+  color: white;
+  background: black;
+  padding: 1rem;
 }
 
-.embla {
-  overflow: hidden;
-}
-.embla__container {
-  display: flex;
-}
-.embla__slide {
-  flex: 0 0 100%;
-  min-width: 0;
+@container article (min-width: 1300px) {
+  .content {
+    flex-direction: row;
+  }
 }
