--- a/app/(home)/projects/[slug]/styles.module.css
+++ b/app/(home)/projects/[slug]/styles.module.css
@@ -1,16 +1,14 @@
-.article {
-  color-scheme: dark;
-  container: article / inline-size;
-  background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(20px);
-  border-radius: 1rem;
+/* Layout */
+.layout {
+  padding: 0px;
+  height: 100%;
 }
 
-.projectTitle {
-  color: white;
-  background: black;
-  border-radius: 1rem 1rem 0 0;
-  padding: 1rem;
+/* Article */
+.article {
+  color-scheme: dark;
+  backdrop-filter: blur(4px);
+  height: 100%;
 }
 
 .content {
@@ -20,30 +18,67 @@
   height: 100%;
 }
 
-.showcase {
-  flex-shrink: 0;
-  flex-basis: 66%;
-  background: black;
-  padding: 1rem;
-  color: white;
+.showcaseAndTitle {
   display: flex;
   flex-direction: column;
-  align-content: center;
+  padding: 1rem;
+  border-radius: var(--border-radius-container) var(--border-radius-container) 0 0;
+  background: radial-gradient(ellipse 50% 33%, black 25%, rgba(0, 0, 0, 0.6) 100%);
+}
+
+.showcase {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
-.showcase-piece {
-  aspect-ratio: 16 / 9;
+.projectTitle {
+  color: white;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 1rem;
+  border-radius: var(--border-radius-content);
+
+  & h1 {
+    font-size: 2em;
+  }
 }
 
 .documentation {
   color: white;
-  background: black;
+  background: rgba(0, 0, 0, 0.6);
   padding: 1rem;
+  overflow-y: auto;
+  flex-grow: 1;
+  border-radius: 0 0 var(--border-radius-container) var(--border-radius-container);
 }
 
-@container article (min-width: 1300px) {
+/* Widescreen Desktop Side by Side */
+@media (min-width: 1000px) {
+  .layout {
+    padding: 32px;
+    height: 100%;
+  }
+
+  .article {
+    backdrop-filter: blur(8px);
+  }
+
   .content {
     flex-direction: row;
+  }
+
+  .showcase {
+    height: 100%;
+  }
+
+  .showcaseAndTitle {
+    min-width: 0px;
+    flex-shrink: 1;
+    border-radius: var(--border-radius-container) 0 0 var(--border-radius-container);
+  }
+
+  .documentation {
+    min-width: 400px;
+    border-radius: 0 var(--border-radius-container) var(--border-radius-container) 0;
   }
 }
