--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,9 @@
+/* Variables */
+:root {
+  --border-radius-container: 1rem;
+  --border-radius-content: calc(var(--border-radius-container) / 2);
+}
+
 /* CSS Reset by Josh Comeau
 https://www.joshwcomeau.com/css/custom-css-reset/#eight-root-stacking-context-9
 */
@@ -5,15 +11,19 @@ https://www.joshwcomeau.com/css/custom-css-reset/#eight-root-stacking-context-9
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
+
 /*
   2. Remove default margin
 */
 * {
   margin: 0;
 }
+
 /*
   Typographic tweaks!
   3. Add accessible line-height
@@ -23,31 +33,50 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
+
 /*
   5. Improve media defaults
 */
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
+
 /*
   6. Remove built-in form typography styles
 */
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
+
 /*
   7. Avoid text overflows
 */
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
+
 /*
   8. Create a root stacking context
 */
-#root, #__next {
+#root,
+#__next {
   isolation: isolate;
 }
+
 /* ====================
    Customizations
    ==================== */
