--- a/components/hamburgerMenu.module.css
+++ b/components/hamburgerMenu.module.css
@@ -57,8 +57,8 @@
 
 @media (max-width: 600px) {
     .navMenu {
-        right: 5;
-        left: 5;
+        right: 5px;
+        left: 5px;
         width: 90%;
         margin: 0 auto;
     }
