--- a/app/(home)/projects/[slug]/styles.module.css
+++ b/app/(home)/projects/[slug]/styles.module.css
@@ -30,6 +30,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
 }
 
 .projectTitle {
@@ -37,10 +42,11 @@
   background: rgba(0, 0, 0, 0.6);
   padding: 1rem;
   border-radius: var(--border-radius-content);
+  margin-bottom: 0.5rem;
+}
 
-  & h1 {
-    font-size: 2em;
-  }
+.projectTitle h1 {
+  font-size: 2em;
 }
 
 .documentation {
@@ -69,6 +75,8 @@
 
   .showcase {
     height: 100%;
+    max-width: 100%;
+    max-height: 100%;
   }
 
   .showcaseAndTitle {
