--- a/components/carousel.module.css
+++ b/components/carousel.module.css
@@ -4,7 +4,28 @@
   display: grid;
   grid-template-columns: 40px 1fr 40px;
   grid-template-rows: 1fr 40px 1fr;
-  justify-tracks: center;
+  justify-items: center;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.viewport {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.slide {
+  flex: 0 0 100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .button {
