--- a/components/carousel.module.css
+++ b/components/carousel.module.css
@@ -1,37 +1,54 @@
 .container {
-  overflow: hidden;
+  position: relative;
   border-radius: var(--border-radius-content);
-  display: grid;
-  grid-template-columns: 40px 1fr 40px;
-  grid-template-rows: 1fr 40px 1fr;
-  justify-items: center;
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.viewport {
-  grid-column: 1 / -1;
-  grid-row: 1 / -1;
-  display: flex;
-  width: 100%;
-  height: 100%;
   overflow: hidden;
-}
-
-.slide {
-  flex: 0 0 100%;
   width: 100%;
   height: 100%;
+}
+
+.emblaViewport {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.emblaContainer {
+  display: flex;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+  margin-left: -10px;
+  /* Adjust as needed */
+}
+
+.emblaSlide {
+  position: relative;
+  min-width: 100%;
+  padding-left: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
 }
 
-.button {
+.emblaButtonPrev,
+.emblaButtonNext {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  background: rgba(47, 13, 13, 0.5);
   border: none;
   border-radius: 50%;
-  aspect-ratio: 1;
+  color: white;
+  padding: 10px;
   cursor: pointer;
-  z-index: 2;
+}
+
+.emblaButtonPrev {
+  left: 10px;
+}
+
+.emblaButtonNext {
+  right: 10px;
 }
