--- a/components/carousel.module.css
+++ b/components/carousel.module.css
@@ -4,6 +4,7 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
+  max-height: 80vh;
 }
 
 .emblaViewport {
@@ -18,7 +19,6 @@
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
   margin-left: -10px;
-  /* Adjust as needed */
 }
 
 .emblaSlide {
@@ -28,6 +28,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
+  max-height: 100%;
   overflow: hidden;
 }
 
@@ -35,11 +37,9 @@
 .emblaButtonNext {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
   z-index: 1;
   background: rgba(47, 13, 13, 0.5);
   border: none;
-  border-radius: 50%;
   color: white;
   padding: 10px;
   cursor: pointer;
