--- a/components/button.module.css
+++ b/components/button.module.css
@@ -1,16 +1,18 @@
+/* styles.module.css */
 .button {
   font-size: 0.8em;
-  background-color: white;
-  color: black;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: #000;
   border: none;
   border-radius: 50px;
   padding: 10px 20px;
   margin-right: 10px;
   cursor: pointer;
   text-align: center;
-  text-decoration: none; /* Nur für den Link-Button */
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .button:hover {
-  background-color: #dfe7ee;
+  background-color: rgba(255, 255, 255, 1);
 }
