--- a/components/carousel.module.css
+++ b/components/carousel.module.css
@@ -1,48 +1,48 @@
+/* carousel.module.css */
+
 .container {
   position: relative;
-  border-radius: var(--border-radius-content);
-  overflow: hidden;
   width: 100%;
-  height: 100%;
-  max-height: 80vh;
+  max-height: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.9); /* Schwarzer Hintergrund für das Karussell */
 }
 
 .emblaViewport {
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  max-height: 80%;
 }
 
 .emblaContainer {
   display: flex;
   user-select: none;
-  -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent;
-  margin-left: -10px;
+  transition: transform 0.3s ease;
 }
 
 .emblaSlide {
   position: relative;
   min-width: 100%;
-  padding-left: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  max-height: 100%;
-  overflow: hidden;
 }
 
 .emblaButtonPrev,
 .emblaButtonNext {
   position: absolute;
   top: 50%;
-  z-index: 1;
-  background: rgba(47, 13, 13, 0.5);
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0.5);
   border: none;
-  color: white;
-  padding: 10px;
   cursor: pointer;
+  padding: 1rem;
+  font-size: 1.5rem;
+  color: #000;
+  z-index: 10;
 }
 
 .emblaButtonPrev {
