--- a/components/showcasePiece.module.css
+++ b/components/showcasePiece.module.css
@@ -12,7 +12,7 @@
 .image,
 .video,
 .audio,
-.web {
+.web iframe {
     max-width: 100%;
     max-height: 80vh;
     object-fit: cover;
@@ -29,8 +29,6 @@
 }
 
 .web iframe {
-    width: 100%;
-    height: 100%;
     border: none;
 }
 
