--- a/components/showcasePiece.module.css
+++ b/components/showcasePiece.module.css
@@ -3,38 +3,39 @@
 .figure {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
 .image,
 .video,
-.audio,
-.web iframe {
-    max-width: 100%;
-    max-height: 80vh;
-    object-fit: cover;
+.web {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
     border-radius: 8px;
+    max-width: 100%;
+}
+.audio {
+  margin: auto;
 }
 
 .text {
-    padding: 1rem;
-    background-color: rgba(255, 255, 255, 0.8);
+    font-family: monospace;
+    padding: 20px;
+    background-color: #111;
+    color: #fff;
     border-radius: 8px;
     max-width: 100%;
-    max-height: 80vh;
-    overflow-y: auto;
+    overflow-wrap: break-word;
 }
 
 .web iframe {
     border: none;
-}
-
-.figcaption {
-    margin-top: 1rem;
-    font-size: 0.9rem;
-    color: #ccc;
-    text-align: center;
+    width: 100%;
+    height: 100%;
 }
