--- a/components/carousel.module.css
+++ b/components/carousel.module.css
@@ -7,10 +7,51 @@
   justify-tracks: center;
 }
 
-.button {
+.embla {
+  overflow: hidden;
+  border-radius: var(--border-radius-content);
+  display: grid;
+  grid-template-columns: 40px 1fr 40px;
+  grid-template-rows: 1fr 40px 1fr;
+  justify-tracks: center;
+  max-height: 80vh;
+  /* aspect ratio hier oder eine Ebene drunter?*/
+}
+
+.embla__container {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 4;
+  display: flex;
+  height: 100%;
+}
+
+
+
+.embla__slide {
+  flex: 0 0 100%;
+  width: 100%;
+  height: 100%;
+
+}
+
+
+.embla__button {
   border: none;
   border-radius: 50%;
   aspect-ratio: 1;
   cursor: pointer;
   z-index: 2;
+}
+
+
+.embla__button.prev {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.embla__button.next {
+  grid-column: 3;
+  grid-row: 2;
 }
