--- a/components/button.module.css
+++ b/components/button.module.css
@@ -1,6 +1,6 @@
 .button {
   font-size: 0.8em;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);
   color: black;
   border: none;
   border-radius: 50px;
@@ -8,9 +8,10 @@
   margin-right: 10px;
   cursor: pointer;
   text-align: center;
-  text-decoration: none; /* Nur für den Link-Button */
+  text-decoration: none;
+  /* Nur für den Link-Button */
 }
 
 .button:hover {
-  background-color: #dfe7ee;
+  background-color: rgba(255, 255, 255, 1);
 }
