--- a/components/showcasePiece.module.css
+++ b/components/showcasePiece.module.css
@@ -4,17 +4,31 @@
     background: black;
 }
 
-.video .audio {
-    border: none;
+.video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.audio {
+    width: 80%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .text {
     color: beige;
-
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
 }
 
 .website {
-    pointerEvents: auto;
+    pointer-events: auto;
 }
 
 .website iframe {
