--- a/app/(home)/projects/[slug]/styles.module.css
+++ b/app/(home)/projects/[slug]/styles.module.css
@@ -6,6 +6,9 @@
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  justify-content: center;
+  padding: 10px;
+  margin: auto;
 }
 
 .navigationButtons {
