--- a/components/world/world.module.css
+++ b/components/world/world.module.css
@@ -3,6 +3,12 @@
   width: 100vw;
   top: 0;
   left: 0;
+  background:
+    url(wide.jpg) no-repeat center center,
+    #b2b0c6;
+  background-size:
+    auto 100%,
+    100%;
 }
 
 .content {
@@ -30,6 +36,83 @@
   opacity: 1;
 }
 
-.scene {
-  background-color: #7a635b;
+.loader,
+.loaderActive,
+.loaderPlaceholder,
+.loaderPlaceholderActive {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.loaderPlaceholder,
+.loaderPlaceholderActive {
+  background:
+    url(wide.jpg) no-repeat center center,
+    #b2b0c6;
+  background-size:
+    auto 100%,
+    100%;
+}
+
+.loaderPlaceholder {
+  animation: fadeOut 1500ms ease-in;
+  opacity: 0;
+}
+
+.loaderActive {
+  backdrop-filter: blur(2vh);
+}
+
+.loader {
+  animation: blur 1500ms ease-in;
+  visibility: hidden;
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes blur {
+  from {
+    visibility: visible;
+    backdrop-filter: blur(2vh);
+    color: black;
+  }
+
+  to {
+    visibility: visible;
+    backdrop-filter: blur(0vh);
+    color: transparent;
+  }
+}
+
+.progress,
+.bar {
+  width: 100px;
+  height: 100px;
+}
+
+.progress {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  outline: solid 2px white;
+  box-sizing: border-box;
+  transition: opacity 100ms ease-out;
+}
+
+.bar {
+  background-color: white;
+  transition: scale 100ms ease-out;
 }
