--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -1,40 +1,82 @@
 .figure {
-    position: relative;
-    height: 100%;
-    background: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background: rgb(0,0,0,0.3);
+  overflow: hidden;
 }
 
-.video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.audio {
-    width: 80%;
-    height: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.image, .video, .audio, .website {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  border-radius: var(--border-radius-media);
+  width: 100%;
+  height: auto;
 }
 
 .text {
-    color: beige;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    pointer-events: none;
+  font-size: 1.1rem;
+  padding: 1rem;
+  white-space: pre-wrap;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: var(--border-radius-media);
+  max-width: 100%;
+  overflow-wrap: break-word;
+}
+
+.audio {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .website {
-    pointer-events: auto;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
-.website iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-    pointer-events: none;
-    overflow: hidden;
+.websiteLink {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
+
+.link {
+  position: absolute; 
+  bottom: 10px; 
+  right: 10px; 
+  background-color: rgb(64, 64, 64, 0.7); 
+  color: white; 
+  padding: 10px 15px; 
+  border: none; 
+  border-radius: 5px; 
+  cursor: pointer; 
+  z-index: 1; /* Stellt sicher, dass der Button über dem iFrame liegt */
+  transition: background-color 0.3s ease;
+}
+
+.link:hover {
+  background-color: rgba(64, 64, 64, 0.9); 
+}
+
+
+.description {
+  margin-top: 1rem;
+  font-size: 0.9rem;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.7);
+  position: relative;
+}
+
+
