--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -15,7 +15,7 @@
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
-  border-radius: var(--border-radius-media);
+  border-radius: var(--border-radius-container);
   width: 100%;
   height: auto;
 }
@@ -25,7 +25,7 @@
   padding: 1rem;
   white-space: pre-wrap;
   background-color: rgba(0, 0, 0, 0.05);
-  border-radius: var(--border-radius-media);
+  border-radius: var(--border-radius-container);
   max-width: 100%;
   overflow-wrap: break-word;
 }
