--- a/components/projectPage/carousel.module.css
+++ b/components/projectPage/carousel.module.css
@@ -38,14 +38,12 @@
 
 .embla__button {
   border: none;
-  /*
   border-radius: 50%;
   aspect-ratio: 1;
-   */
   cursor: pointer;
-  font-size: 2rem;
   grid-row: 1;
   z-index: 1;
+  align-self: center;
 }
 
 .prev {
@@ -54,7 +52,6 @@
 
 .next {
   grid-column: 3;
- 
 }
 
 .embla__dots {
