--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -7,7 +7,6 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  background: rgb(0,0,0,0.3);
   overflow: hidden;
 }
 
@@ -24,10 +23,13 @@
   font-size: 1.1rem;
   padding: 1rem;
   white-space: pre-wrap;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(0, 0, 0, 0.95);
+  color: white;
   border-radius: var(--border-radius-container);
   max-width: 100%;
   overflow-wrap: break-word;
+  overflow-y: auto;
+  margin: 2rem;
 }
 
 .audio {
@@ -69,7 +71,6 @@
 .link:hover {
   background-color: rgba(64, 64, 64, 0.9); 
 }
-
 
 .description {
   margin-top: 1rem;
