--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -8,15 +8,22 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
+  /*background: mediumpurple;*/
 }
 
-.image, .video, .audio, .website {
+.video, .audio, .website {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
   border-radius: var(--border-radius-container);
   width: 100%;
   height: auto;
+}
+
+.image {
+  object-fit: contain;
+  border-radius: var(--border-radius-container);
+  aspectRatio: "auto";
 }
 
 .text {
