--- a/components/projectPage/carousel.module.css
+++ b/components/projectPage/carousel.module.css
@@ -4,12 +4,13 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  /*background-color: darkred;*/
 }
 
 .embla {
   overflow: hidden;
   border-radius: var(--border-radius-content);
+  background-color: rgb(255, 255, 255, 0.3);
+  margin-bottom: 0.5rem;
   width: 100%;
   height: 100%;
   display: grid;
@@ -65,7 +66,6 @@
   background: rgba(255, 255, 255, 0.8);
   padding: 1px;
   border-radius: 10px;
-  margin-top: 5px;
   width: 100%;
   box-sizing: border-box;
 }
