--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -10,7 +10,7 @@
   overflow: hidden;
 }
 
-.video, .audio, .website {
+.video, .audio, .iFrame {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
@@ -41,13 +41,7 @@
   align-items: center;
 }
 
-.website {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
-.websiteLink {
+.websiteContainer {
   position: relative;
   width: 100%;
   height: 100%;
@@ -57,7 +51,13 @@
   overflow: hidden;
 }
 
-.link {
+.iFrame {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+.expandButton {
   position: absolute; 
   bottom: 10px; 
   right: 10px; 
@@ -71,7 +71,7 @@
   transition: background-color 0.3s ease;
 }
 
-.link:hover {
+.expandButton:hover {
   background-color: rgba(64, 64, 64, 0.9); 
 }
 
