#76 fixing text-width and embla-button-style

--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -30,6 +30,7 @@
   color: white;
   border-radius: var(--border-radius-container);
   max-width: 100%;
+  width: 90%;
   overflow-wrap: break-word;
   overflow-y: auto;
   margin: 2rem;
