--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -10,6 +10,17 @@
   overflow: hidden;
 }
 
+.contentContainer {
+  position: relative; /* Macht den Container zum Bezugspunkt für absolute Positionierung */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
+}
+
+
 .video, .audio, .iFrame {
   max-width: 100%;
   max-height: 100%;
@@ -30,10 +41,10 @@
   color: white;
   border-radius: var(--border-radius-container);
   max-width: 100%;
+  max-height: 100%;
   width: 90%;
   overflow-wrap: break-word;
   overflow-y: auto;
-  margin: 2rem;
 }
 
 .audio {
@@ -77,7 +88,7 @@
 }
 
 .description {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   font-size: 0.9rem;
   text-align: center;
   color: rgba(255, 255, 255, 0.7);
