#86 integriere Projektbeschreibung als Tooltip

--- a/components/projectPage/projectPage.module.css
+++ b/components/projectPage/projectPage.module.css
@@ -1,5 +1,3 @@
-/*projectPage.module.css*/
-
 .pageContainer {
   display: flex;
   flex-direction: column;
@@ -65,6 +63,60 @@
 .projectTitle h1 {
   font-size: 2em;
 }
+
+.titleWithInfo {
+  display: flex;
+  align-items: center;
+}
+
+.infoIcon {
+  font-size: 1.2rem;
+  color: #555;
+  cursor: pointer;
+}
+
+.tooltip {
+  position: absolute;
+  top: 100%; /* Tooltip unter dem Icon anzeigen */
+  left: 50%; /* Tooltip in der Mitte des Icons ausrichten */
+  transform: translate(-50%, 10px); /* Leichte Verschiebung nach unten */
+  background-color: #333;
+  color: #fff;
+  text-align: left; /* Text linksbündig */
+  border-radius: 5px;
+  padding: 8px;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  z-index: 1;
+  visibility: hidden;
+  opacity: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optionaler Schatten */
+  white-space: normal;/* Umbrüche erlauben */
+  overflow-wrap: break-word; /* Umbrüche bei langen Wörtern */
+}
+
+.infoIconWrapper {
+  position: relative;
+  display: inline-block;
+  overflow: visible; /* Sicherstellen, dass der Tooltip nicht abgeschnitten wird */
+}
+
+.infoIcon:focus + .tooltip,
+.infoIconWrapper:focus-within .tooltip,
+.infoIcon:hover + .tooltip,
+.infoIconWrapper:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+  transform: translate(-50%, 10px); /* Leichte Verschiebung bei Sichtbarkeit */
+}
+
+@media (max-width: 600px) {
+  .tooltip {
+    left: auto; /* Tooltip bleibt unter dem Icon */
+    right: 0; /* Sicherstellen, dass der Tooltip nicht über den Bildschirmrand hinausgeht */
+    transform: translate(0, 10px); /* Verschiebung bei kleinen Bildschirmen */
+  }
+}
+
 .showcase {
   display: flex;
   flex-direction: column;
@@ -76,7 +128,6 @@
   max-width: 100%;
   overflow: hidden;
   border-radius: var(--border-radius-content);
-  /*background-color: rgb(45,88,255, 0.5);*/
 }
 
 .documentation {
