--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -1,12 +1,13 @@
 .figure {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
+  position: relative;
   overflow: hidden;
 }
 
