--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column; 
   justify-content: center; 
-  align-items: center; 
+  align-items: center;
 }
 
 
@@ -32,6 +32,7 @@
 
 .image {
   object-fit: contain;
+  border-radius: var(--border-radius-content);
 }
 
 .text {
