--- a/components/projectPage/showcasePiece.module.css
+++ b/components/projectPage/showcasePiece.module.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column; 
   justify-content: center; 
-  align-items: center; 
+  align-items: center;
 }
 
 
@@ -32,6 +32,7 @@
 
 .image {
   object-fit: contain;
+  border-radius: var(--border-radius-content);
 }
 
 .text {
@@ -40,7 +41,7 @@
   white-space: pre-wrap;
   background-color: rgba(0, 0, 0, 0.95);
   color: white;
-  border-radius: var(--border-radius-container);
+  border-radius: var(--border-radius-content);
   max-width: 100%;
   max-height: 100%;
   width: 90%;
@@ -62,6 +63,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  border-radius: var(--border-radius-content);
 }
 
 .iFrame {
