107 fix empty routes (#108)
* #107 redirect for empty route

* #107 restructuring folders for navigation/routes and further layouting

* #107 contexts for projects, settings and HotSpots

* #107 added app-layout for setting, projects and hotspots, and used context all over app, build fails, dev works

* #107 change types in layout-files to fix build

* fix: allow pages to be exported statically

---------

Co-authored-by: Luca Selinski <lucaselinski@gmail.com>

--- a/components/menu.module.css
+++ b/components/menu.module.css
@@ -76,6 +76,10 @@
     font-weight: bold;
 }
 
+.hotSpot {
+  cursor: pointer;
+}
+
 /* Styling für den separaten Abschnitt der statischen Links */
 .staticLinks {
   margin-top: 10px;
